--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,15 @@
 services:
+    mosquitto:
+        container_name: mosquitto
+        image: eclipse-mosquitto
+        restart: always
+        ports:
+          - 1883:1883
+          - 9001:9001
+        volumes:
+          - ./mosquitto/config:/mosquitto/config/
+        networks:
+         - iotistic
     nodered:
         build:
             context: ./nodered
