--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,3 +1,3 @@
 [raspberrypi]
 # Replace with your actual Raspberry Pi IP address and username
-pi@192.168.1.100 ansible_ssh_pass=raspberry
+zemfyre@10.0.0.197 ansible_ssh_pass=password123
