--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,8 +1,11 @@
 # Ansible Dockerfile for Raspberry Pi deployment
-FROM python:3.14-slim
+FROM python:3.12-slim
+
+# Upgrade system packages to address vulnerabilities
+RUN apt-get update && apt-get upgrade -y
 
 # Install Ansible, sshpass, SSH client, and Git
-RUN apt-get update && apt-get install -y \
+RUN apt-get install -y \
     sshpass \
     openssh-client \
     git \
