--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # External port mappings for docker-compose
-MOSQUITTO_PORT_EXT=51883
+MOSQUITTO_PORT_EXT=1883
 MOSQUITTO_WS_PORT_EXT=59001
 NODERED_PORT_EXT=51880
 INFLUXDB_PORT_EXT=58086
