--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -551,7 +551,7 @@ token_expiration_day_limit =
 login_cookie_name = grafana_session
 
 # Disable usage of Grafana build-in login solution.
-disable_login = false
+disable_login = true
 
 # The maximum lifetime (duration) an authenticated user can be inactive before being required to login at next visit. Default is 7 days (7d). This setting should be expressed as a duration, e.g. 5m (minutes), 6h (hours), 10d (days), 2w (weeks), 1M (month). The lifetime resets at each successful token rotation (token_rotation_interval_minutes).
 login_maximum_inactive_lifetime_duration =
@@ -563,7 +563,7 @@ login_maximum_lifetime_duration =
 token_rotation_interval_minutes = 10
 
 # Set to true to disable (hide) the login form, useful if you use OAuth
-disable_login_form = false
+disable_login_form = true
 
 # Set to true to disable the sign out link in the side menu. Useful if you use auth.proxy or auth.jwt.
 disable_signout_menu = false
@@ -618,10 +618,10 @@ configurable_providers = github gitlab google generic_oauth azuread okta
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = false
+enabled = true
 
 # specify organization name that should be used for unauthenticated users
-org_name = Main Org.
+org_name = zemfyre
 
 # specify role for unauthenticated users
 org_role = Viewer
