Comment out Grafana environment overrides: manual changes applied

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,10 +50,10 @@ services:
         environment:
             - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME:-admin}
             - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
-            - GF_AUTH_ANONYMOUS_ENABLED=true
-            - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
-            - GF_AUTH_BASIC_ENABLED=false
-            - GF_AUTH_DISABLE_LOGIN_FORM=true
+            # - GF_AUTH_ANONYMOUS_ENABLED=true
+            # - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+            # - GF_AUTH_BASIC_ENABLED=false
+            # - GF_AUTH_DISABLE_LOGIN_FORM=true
 
         volumes:
             - ./grafana/data/grafana.db:/var/lib/grafana/grafana.db
