Update grafana.ini: manual changes applied

--- a/grafana/config/grafana.ini
+++ b/grafana/config/grafana.ini
@@ -618,7 +618,7 @@ configurable_providers = github gitlab google generic_oauth azuread okta
 #################################### Anonymous Auth ######################
 [auth.anonymous]
 # enable anonymous access
-enabled = true
+enabled = false
 
 # specify organization name that should be used for unauthenticated users
 org_name = zemfyre
