--- a/ansible/deploy-raspberrypi.yml
+++ b/ansible/deploy-raspberrypi.yml
@@ -6,7 +6,7 @@
     repo_url: "https://github.com/dsamborschi/zemfyre-sensor.git"
     repo_dir: "zemfyre-sensor"
     setup_script: "setup.sh"
-    kiosk_url: "http://localhost:53000/d/ddwxbtmmr6nlsa/zus80lp?orgId=1&refresh=5s&from=now-5m&to=now&kiosk"
+    kiosk_url: "http://localhost:53000/d/ddwxbtmmr6nlsa/zus80lp?orgId=1&refresh=auto&from=now-5m&to=now&kiosk"
     autostart_file: "/etc/xdg/lxsession/LXDE-pi/autostart"
 
   tasks:
