--- a/ansible/.env
+++ b/ansible/.env
@@ -4,3 +4,8 @@ MOSQUITTO_WS_PORT_EXT=59001
 NODERED_PORT_EXT=51880
 INFLUXDB_PORT_EXT=58086
 GRAFANA_PORT_EXT=53000
+GRAFANA_USERNAME=admin
+GRAFANA_PASSWORD=admin
+GRAFANA_AUTH_ANONYMOUS_ENABLED=false
+GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
+GRAFANA_AUTH_DISABLE_LOGIN_FORM=false
