Add Portainer service to docker-compose for container management

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,17 @@ services:
             - "${GRAFANA_PORT_EXT:-53000}:3000"
         networks:
           - zemfyre
+    portainer:
+        image: portainer/portainer-ce:latest
+        container_name: portainer
+        restart: always
+        ports:
+            - "9000:9000"
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - portainer_data:/data
+        networks:
+            - zemfyre
 networks:
   zemfyre:
     driver: bridge
