--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -152,10 +152,10 @@ RUN if [ ! -z "${GF_INSTALL_PLUGINS}" ]; then \
 #     /usr/share/grafana/public/app/plugins/panel/traces \
 #     /usr/share/grafana/public/app/plugins/panel/flamegraph
 
-# USER grafana
+USER grafana
 
-# HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-#     CMD curl -f http://localhost:3000/api/health || exit 1
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:3000/api/health || exit 1
 
 ## Provisioning
 # COPY ./grafana/provisioning /etc/grafana/provisioning
