--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ GRAFANA_PASSWORD=admin
 GRAFANA_AUTH_ANONYMOUS_ENABLED=false
 GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
 GRAFANA_AUTH_DISABLE_LOGIN_FORM=false
+GRAFANA_VOLUME=./grafana/data
