Comment out Grafana configuration volume mounts in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,8 +57,8 @@ services:
 
         volumes:
             - ${GRAFANA_VOLUME:-grafana-storage}:/var/lib/grafana
-            - ./grafana/config/grafana.ini:/etc/grafana/grafana.ini
-            - ./grafana/provisioning:/etc/grafana/provisioning
+            # - ./grafana/config/grafana.ini:/etc/grafana/grafana.ini
+            # - ./grafana/provisioning:/etc/grafana/provisioning
         ports:
             - "${GRAFANA_PORT_EXT:-53000}:3000"
         networks:
