Update deployment task name in deploy-raspberrypi.yml and suppress output in setup.sh docker-compose command

--- a/ansible/deploy-raspberrypi.yml
+++ b/ansible/deploy-raspberrypi.yml
@@ -1,5 +1,5 @@
 ---
-- name: Deploy zemfyre-sensor to Raspberry Pi
+- name: Deploy zemfyre-sensor apps to Raspberry Pi
   hosts: raspberrypi
   become: yes
   vars:
