--- a/ansible/deploy-raspberrypi-headless.yml
+++ b/ansible/deploy-raspberrypi-headless.yml
@@ -6,10 +6,22 @@
     repo_url: "https://github.com/dsamborschi/zemfyre-sensor.git"
     repo_dir: "zemfyre-sensor"
     setup_script: "setup.sh"
-    kiosk_url: "http://localhost:53000/d/ddwxbtmmr6nlsa/zus80lp?orgId=1&refresh=auto&from=now-5m&to=now"
     autostart_file: "/etc/xdg/lxsession/LXDE-pi/autostart"
 
   tasks:
+    - name: Load GRAFANA_PORT_EXT from .env file
+      set_fact:
+        grafana_port_ext: "{{ lookup('file', playbook_dir + '/.env.pi').splitlines() | select('match', '^GRAFANA_PORT_EXT=') | map('regex_replace', '^GRAFANA_PORT_EXT=(.*)$', '\\1') | list | first | default('3000') }}"
+    
+    - name: Show loaded Grafana port
+      debug:
+        msg: "GRAFANA_PORT_EXT loaded from .env.pi is: {{ grafana_port_ext }}"
+
+    - name: Set kiosk_url with dynamic port
+      set_fact:
+        kiosk_url: "http://localhost:{{ grafana_port_ext }}/d/deqcaxn5g7vnkd/zus80lp-compact?orgId=1&refresh=auto&from=now-5m&to=now"
+
+    
     - name: Ensure git is installed
       apt:
         name: git
@@ -26,37 +38,24 @@
       apt:
         name:
           - chromium-browser
-          - unclutter
-          - xdotool
         state: present
         update_cache: yes
     
-    - name: Check if ngrok is running as a systemd service
-      shell: systemctl is-active ngrok.service
-      register: ngrok_status
-      changed_when: false
-      failed_when: false
-
-    - name: Print ngrok service status
-      debug:
-        msg: "ngrok is {{ 'running' if ngrok_status.stdout == 'active' else 'not running or not installed' }}"
-
-    - name: Overwrite LXDE autostart file with kiosk setup
+    - name: Overwrite .xinitrc with X11 + Chromium kiosk setup
       copy:
-        dest: "{{ autostart_file }}"
+        dest: "/home/pi/.xinitrc"
         content: |
-          @lxpanel --profile LXDE-piAdd commentMore actions
-          @pcmanfm --desktop --profile LXDE-pi
-          @xscreensaver -no-splash
+          #!/bin/sh
+          xset s off
+          xset -dpms
+          xset s noblank
+          unclutter -idle 0.1 -root &
+          openbox-session &
+          chromium-browser --noerrdialogs --disable-infobars --kiosk {{ kiosk_url }}
+        owner: pi
+        group: pi
+        mode: '0755'
 
-          @xset s off
-          @xset -dpms
-          @xset s noblank
-          @unclutter -idle 0.1 -root
-          @chromium-browser --noerrdialogs --disable-infobars --kiosk {{ kiosk_url }}
-        owner: root
-        group: root
-        mode: '0644'
 
     - name: Download or update zemfyre-sensor repo
       git:
@@ -70,9 +69,16 @@
         path: "{{ repo_dir }}/{{ setup_script }}"
         mode: '0755'
     
-    - name: Load environment variables from .env file
-      set_fact:
-        env_vars: "{{ lookup('ini', lookup('file', playbook_dir + '/.env'), delimiter='=') }}"
+    - name: Copy Raspberry Pi-specific .env file to repo directory
+      copy:
+        src: "{{ playbook_dir }}/.env.pi"
+        dest: "{{ repo_dir }}/.env"
+        mode: '0644'
+
+    - name: Ensure setup.sh is executable
+      file:
+        path: "{{ repo_dir }}/{{ setup_script }}"
+        mode: '0755'
 
     - name: Run setup.sh
       command: ./{{ setup_script }}
