Add minimal Roboto font-face for offline use in admin styles

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ GRAFANA_AUTH_ANONYMOUS_ENABLED=false
 GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
 GRAFANA_AUTH_DISABLE_LOGIN_FORM=false
 GRAFANA_VOLUME=./grafana/data
+ADMIN_PORT=51850
