Update sidebar menu visibility and change flow editor title for clarity

--- a/nodered/data/.config.users.json
+++ b/nodered/data/.config.users.json
@@ -13,6 +13,6 @@
                 "view-show-welcome-tours": true
             }
         },
-        "menu-menu-item-sidebar": false
+        "menu-menu-item-sidebar": true
     }
 }
