--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,10 +68,10 @@ services:
         container_name: portainer
         restart: always
         ports:
-            - "9000:9000"
+            - "59000:9000"
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
-            - ./portainer_data:/data
+            - ./portainer/data:/data
         networks:
             - zemfyre
     admin:
