Comment out HEALTHCHECK in Dockerfile and update portainer database

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -112,8 +112,8 @@ RUN if [ ! -z "${GF_INSTALL_PLUGINS}" ]; then \
 
 USER grafana
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD curl -f http://localhost:53000/api/health || exit 1
+# HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+#     CMD curl -f http://localhost:53000/api/health || exit 1
 
 ## Provisioning
 # COPY ./grafana/provisioning /etc/grafana/provisioning
