feat: add Azure IoT Hub node and enable editable settings in Node-RED
- Added dependency for node-red-contrib-azure-iot-hub version ~0.4.0 in package.json.
- Changed the editable property to true in settings.js to allow editing of node properties.
- Updated portainer database file.

--- a/nodered/data/.config.users.json
+++ b/nodered/data/.config.users.json
@@ -11,6 +11,12 @@
                 "view-node-show-label": true,
                 "view-show-tips": true,
                 "view-show-welcome-tours": true
+            },
+            "dialog": {
+                "export": {
+                    "pretty": true,
+                    "json-view": true
+                }
             }
         },
         "menu-menu-item-sidebar": true
