--- a/nodered/data/package.json
+++ b/nodered/data/package.json
@@ -7,6 +7,7 @@
         "@flowfuse/node-red-dashboard": "~1.16.0",
         "@mschaeffler/node-red-lora": "~3.2.3",
         "@node-red-contrib-themes/theme-collection": "^4.0.11",
+        "node-red-contrib-azure-iot-hub": "~0.4.0",
         "node-red-contrib-filesystem": "~1.0.0",
         "node-red-contrib-influxdb": "~0.7.0",
         "node-red-contrib-machine-learning-v2": "~1.0.9",
